# of-controller

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: controller.rs  lib.rs  main.rs  scd41.rs  switch.rs  tank.rs
