[package]
name = "of-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
pretty_env_logger = "0.4"
bincode = "1.3.3"
rumqttc = "0.23.0"
postcard = "1.0.0"

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*" }
async-std = { version = "1.12.0", features=["attributes", "tokio1"]}

